--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -3,12 +3,13 @@
 $defaultFont    : 'Open Sans', sans-serif;
 $subFont        : 'Noto serif', serif;
 $mainColor      : #086814;
-$sucColor1      : #e4670d;
-$sucColor1      : #f1da2b;
+$sucColor1      : #e45f0d;
+$sucColor2      : #f1da2b;
 $darkGray       : #2f2f2f;
 $mediumGray     : #797979;
-$lightgray      : #F5F5F5;
-$defaultH3Mob   : 24px;
+$lightgray      : #e1e1e1;
+$whitegray          : #F5F5F5;
+$defaultH3Mob   : 22px;
 $defaultH3Tab   : 26px;
 $defaultH3Des   : 23px;
 
