--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -3,7 +3,7 @@
 $defaultFont    : 'Open Sans', sans-serif;
 $subFont        : 'Noto serif', serif;
 $mainColor      : #086814;
-$sucColor1      : #e45f0d;
+$sucColor1      : #f65b1d;
 $sucColor2      : #f1da2b;
 $darkGray       : #2f2f2f;
 $mediumGray     : #797979;
