--- a/scss/pages/home/_mobile.scss
+++ b/scss/pages/home/_mobile.scss
@@ -50,8 +50,8 @@ h3 {
         @include rowGap(1.5vh);
         color: $mediumGray;
         line-height: 1.3;
-
         border: 1px solid $lightgray;
+        border-top: 0px none transparent;
 
         p {
             font-size: 17px;
@@ -98,8 +98,8 @@ h3 {
         justify-content: right;
 
         p {
-            width: 8vh;
-            height: 4vh;
+            width: 25%;
+            height: 18%;
             font-weight: 500;
             font-size: 17px;
             letter-spacing: 1px;
