--- a/scss/pages/home/_tablet.scss
+++ b/scss/pages/home/_tablet.scss
@@ -34,7 +34,7 @@ h3 {
             font-size: 17px;
 
             &:hover {
-                color: $sucColor1;
+                color: $subColor1;
                 text-decoration: underline;
             }
         }
