--- a/scss/pages/home/_mobile.scss
+++ b/scss/pages/home/_mobile.scss
@@ -104,7 +104,7 @@ h3 {
             font-size: 17px;
             letter-spacing: 1px;
             border-radius: 2vh;
-            background-color: $sucColor1;
+            background-color: $subColor1;
             @include alignColumn(center);
             justify-content: center;
         }
@@ -116,80 +116,74 @@ h3 {
         height: 25vh;
         object-fit: cover;
     }
+
 }
 
-// .place {
-//       width: 100%;
-//       display: flex;
-//       flex-direction: column;
-//       justify-content: center;
-//       align-items: center;
+.place {
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
 
-//     > article {
-//         width: $contentRatioMob;
-//         display: flex;
-//         justify-content: space-between;
-//         align-items: center;
+    > article {
+        width: $contentRatioMob;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
 
-//         > a {
-//             @include columnGap(0.7vh);
-//             align-items: center;
-//             color: $mediumGray;
-//         }
+        > a {
+            @include columnGap(0.7vh);
+            align-items: center;
+            color: $mediumGray;
+        }
 
-//         i {
-//             font-size: 13px;
-//         }
-//     }
+        i {
+            font-size: 13px;
+        }
+    }
     
-//     > section {
-//         width: 100%;
-//         display: flex;
-//         flex-direction: column;
-//         justify-content: center;
-//         align-items: center;
-//         row-gap: 8vh;
+    > section {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        row-gap: 8vh;
 
-//         > article { 
-//             display: flex;
-//             flex-direction: column;
-//             justify-content: center;
-//             align-items: center;
-//             width: 40vh;
-//             height: 40vh;
-//             border-radius: 50%;
-//             background-image: url(/img/pexels-helena-lopes-696218.jpg);
-//             background-position: center;
-//             background-size: cover;
-//             background-repeat: no-repeat;
+        > article { 
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            width: 40vh;
+            height: 40vh;
+            border-radius: 50%;
+            background-image: url(/img/pexels-helena-lopes-696218.jpg);
+            background-position: center;
+            background-size: cover;
+            background-repeat: no-repeat;
 
-//             aside {
-//                 width: 100%;
-//                 height: 100%;
-//                 border-radius: 50%;
-//                 background-color: rgba($color: #444, $alpha: 0.5);
-//                 display: flex;
-//                 flex-direction: column;
-//                 justify-content: center;
-//                 align-items: center;
-//                 row-gap: 1vh;
+            aside {
+                width: 100%;
+                height: 100%;
+                border-radius: 50%;
+                background-color: rgba($color: #444, $alpha: 0.4);
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
 
-//                 strong, a {
-//                     color: white;
-//                 }
+                strong, a {
+                    color: white;
+                }
 
-//                 strong {
-//                     font-size: 30px;
-//                 }
+                strong {
+                    font-size: 30px;
+                }
 
-//                 a {
-//                     font-size: 20px;
-//                 }
-//             }
-//         }
-
-        
+            }
+        }
     
-//     }
-
-// }
+    }
+}
