--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -15,3 +15,9 @@
     flex-direction: column;
     row-gap: $gap;
 }
+
+@mixin flexRow($gap : 0) {
+    flex-direction: row;
+    flex-wrap: wrap;
+    column-gap: $gap;
+}
