Main: Place CSS_tablet,desktop Modified Done

--- a/scss/pages/home/_desktop.scss
+++ b/scss/pages/home/_desktop.scss
@@ -42,16 +42,21 @@ h3 {
 
 .place {
 
+    > article {
+        width: $contentRatioDes;
+    }
+
     > section {
+        width: $contentRatioDes;
         column-gap: 2vh;
         > article {
-            width: 40vh;
-            height: 40vh;
+            width: 35vh;
+            height: 35vh;
 
             aside {
                 row-gap: 2vh;
                 strong {
-                    font-size: 30px;
+                    font-size: 28px;
                 }
 
                 a {
