--- a/scss/pages/home/_tablet.scss
+++ b/scss/pages/home/_tablet.scss
@@ -75,9 +75,13 @@ h3 {
 }
 
 .place {
-    width: 90%;    
+    > article {
+        width: $contentRatioTab;
+    }
+
 
     > section {
+        width: $contentRatioTab;
         @include flexRow(8vh);
         justify-content: center;
 
