--- a/scss/pages/home/_mobile.scss
+++ b/scss/pages/home/_mobile.scss
@@ -21,6 +21,55 @@ h3 {
     font-weight: 500;
 }
 
+nav {
+
+    display: flex;
+    justify-content: space-between;
+
+    > article {
+
+        ul {
+            list-style-type: none;
+            overflow: hidden;
+            background-color: #333;
+    
+        }
+
+        > li {
+            float: left;
+        }
+
+        a, .dropbtn {
+            display: inline-block;
+            color: white;
+            text-align: center;
+            padding: 14px 16px;
+            text-decoration: none;
+        }
+
+        li a:hover, .dropdown:hover .dropbtn {
+            background-color: red;
+        }
+          
+        aside {
+            display: none;
+            position: absolute;
+            background-color: #f9f9f9;
+            min-width: 160px;
+            box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+            z-index: 1;
+        }
+
+        aside a {
+            
+        }
+
+    }
+
+    
+
+}
+
 
 .event {
 
