Main: Place_CSS done

--- a/scss/pages/home/_desktop.scss
+++ b/scss/pages/home/_desktop.scss
@@ -61,6 +61,13 @@ h3 {
 
                 a {
                     font-size: 12px;
+                    transition: .2s;
+                }
+
+                a:hover {
+                    background-color: $mainColor;
+                    color: $whitegray;
+                    border: 2px solid transparent;
                 }
             }
             
