--- a/scss/pages/home/_mobile.scss
+++ b/scss/pages/home/_mobile.scss
@@ -32,14 +32,13 @@ nav {
             list-style-type: none;
             overflow: hidden;
             background-color: #333;
-    
         }
 
-        > li {
+        li {
             float: left;
         }
 
-        a, .dropbtn {
+        li a, .dropbtn {
             display: inline-block;
             color: white;
             text-align: center;
@@ -51,7 +50,11 @@ nav {
             background-color: red;
         }
           
-        aside {
+        li.dropdown {
+            display: inline-block;
+        }
+          
+        .dropdown-content {
             display: none;
             position: absolute;
             background-color: #f9f9f9;
@@ -59,14 +62,24 @@ nav {
             box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
             z-index: 1;
         }
-
-        aside a {
-            
+          
+        .dropdown-content a {
+            color: black;
+            padding: 12px 16px;
+            text-decoration: none;
+            display: block;
+            text-align: left;
         }
 
-    }
+        .dropdown-content a:hover {
+            background-color: #f1f1f1;
+        }
 
-    
+        .dropdown:hover .dropdown-content {
+            display: block;
+        }
+          
+    }
 
 }
 
