--- a/scss/pages/home/_mobile.scss
+++ b/scss/pages/home/_mobile.scss
@@ -22,65 +22,63 @@ h3 {
 }
 
 nav {
-
+    width: 100%;
+    position: fixed;
+    z-index: 2;
     display: flex;
     justify-content: space-between;
+    align-items: center;
+    background-color: $mainColor;
+    padding-top: 3%;
+    padding-bottom: 3%;
 
     > article {
+        display: none;
+    }
+}
 
-        ul {
-            list-style-type: none;
-            overflow: hidden;
-            background-color: #333;
-        }
+details {
+    width: 95%;
+    padding-right: 5%;
+    text-align: right;
+    position: absolute;
+    display: flex;
+    color: white;
 
-        li {
-            float: left;
-        }
-
-        li a, .dropbtn {
-            display: inline-block;
-            color: white;
-            text-align: center;
-            padding: 14px 16px;
-            text-decoration: none;
-        }
-
-        li a:hover, .dropdown:hover .dropbtn {
-            background-color: red;
-        }
-          
-        li.dropdown {
-            display: inline-block;
-        }
-          
-        .dropdown-content {
-            display: none;
-            position: absolute;
-            background-color: #f9f9f9;
-            min-width: 160px;
-            box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-            z-index: 1;
-        }
-          
-        .dropdown-content a {
-            color: black;
-            padding: 12px 16px;
-            text-decoration: none;
-            display: block;
-            text-align: left;
-        }
-
-        .dropdown-content a:hover {
-            background-color: #f1f1f1;
-        }
-
-        .dropdown:hover .dropdown-content {
-            display: block;
-        }
-          
+    > ul {
+        position: absolute;
+        width: 100%;
+        margin: 2.2vh;
+        text-align: left;
+        background-color: white;
+        box-shadow: 0 8px 16px 0 rgba($color: #c0c8b9, $alpha: 0.6);
     }
 
+    li {
+        display: flex;
+        flex-direction: column;
+    }
+
+    a {
+        display: flex;
+        padding: 2%;
+        color: $darkGray;
+    } 
+}
+
+ul ul a {
+    padding-left: 4vh;
+}
+
+h1 {
+    color: white;
+    @include columnGap(1vh);
+    align-items: center;
+    padding-left: 5%;
+
+    i {
+        color: $subColor2;
+    }
 }
 
 
