--- a/scss/pages/home/_mobile.scss
+++ b/scss/pages/home/_mobile.scss
@@ -21,6 +21,7 @@ h3 {
     font-weight: 500;
 }
 
+// NAV
 nav {
     width: 100%;
     position: fixed;
@@ -92,7 +93,7 @@ h1 {
     }
 }
 
-
+// EVENT
 .event {
 
     > article {
@@ -187,7 +188,6 @@ h1 {
         height: 25vh;
         object-fit: cover;
     }
-
 }
 
 .place {
