--- a/scss/pages/_mobile.scss
+++ b/scss/pages/_mobile.scss
@@ -1,5 +1,100 @@
 @media (min-width: 200px) {
 
+    main {
+        > section {
+            row-gap: 6vh;
+            padding-top: 8vh;
+            padding-bottom: 8vh;
+    
+            > section, > aside {
+                width: $contentRatioMob;
+                @include alignColumn;
+            }
+        }
+    
+        p {
+            font-size: 14px;
+        }
+    }
+    
+    h3 {
+        font-size: $defaultH3Mob;
+        text-transform: uppercase;
+        font-weight: 500;
+    }
+    
+    // NAV
+    nav {
+        width: 100%;
+        position: fixed;
+        z-index: 2;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        background-color: $mainColor;
+        padding-top: 3%;
+        padding-bottom: 3%;
+    
+        > article {
+            display: none;
+        }
+    }
+    
+    details {
+        width: 95%;
+        padding-right: 5%;
+        text-align: right;
+        position: absolute;
+        display: flex;
+        color: white;
+    
+        summary {
+            font-size: 20px;
+        }
+    
+        > ul {
+            position: absolute;
+            width: 100%;
+            margin-top: 1.7vh;
+            text-align: left;
+            background-color: white;
+            box-shadow: 0 8px 16px 0 rgba($color: #c0c8b9, $alpha: 0.6);
+    
+            > li {
+                border-bottom: 1px solid $lightgray;
+            }
+        }
+    
+        li {
+            display: flex;
+            flex-direction: column;
+        }
+    
+        a {
+            display: flex;
+            padding: 2.5%;
+            padding-left: 5%;
+            color: $darkGray;
+        } 
+    }
+    
+    ul ul a {
+        padding-left: 10%;
+        font-size: 15px;
+        color: $mediumGray;
+    }
+    
+    h1 {
+        color: white;
+        @include columnGap(1vh);
+        align-items: center;
+        padding-left: 5%;
+    
+        i {
+            color: $subColor2;
+        }
+    }
+
     @import 'home/mobile';
     @import 'event/mobile';
     @import 'place/mobile';
