--- a/scss/_normalize.scss
+++ b/scss/_normalize.scss
@@ -16,3 +16,9 @@ main > section {
 a {
     text-decoration: none;
 }
+
+h1, h2, h3, h4, h5, h6, p,
+address, figure {
+    margin: 0;
+    padding: 0;
+}
