--- a/scss/pages/place/_mobile.scss
+++ b/scss/pages/place/_mobile.scss
@@ -3,10 +3,11 @@ main {
         width: 95%;
         > aside {
             @include alignColumn (center);
+            row-gap: 1vh;
             text-align: center;
             h4 {
                 color: $mainColor;
-                font-size: 28px;
+                font-size: 24px;
                 font-weight: 700;
                 text-transform: uppercase;
             }
@@ -30,8 +31,153 @@ main {
 
     }
   @include alignColumn (center);
-    // // restaurant
-    // .restaurant{}
+    // restaurant
+    .restaurant{
+        > section {
+            > section {
+                @include alignColumn(center);
+                row-gap: 4vh;
+                article {
+                    width: 70%;
+                    padding: 2vh 0;
+                    border: 1px solid $lightgray;
+                    @include alignColumn(center);
+                    row-gap: 2vh;
+                    figure {
+                        width: 80%;
+                        height: 20vh;
+                        padding: 1vh;
+                        @include backImg;
+                        background-image: url(/img/restaurant_1.jpg);
+                        
+                        figcaption{
+                            display: flex;
+                            justify-content: flex-end;
+                            width: 100%;
+                            height: 100%;
+                            a {
+                                @include flexAll (none,center,center,0,0);
+                                text-align: center;
+                                width: 3vh;
+                                height: 3vh;
+                                border-radius: 50%;
+                                background-color: $whitegray;
+                            }
+                            i {
+                                color: $subColor1;
+                            }
+
+                            a:active i {
+                                background-color: $subColor1;
+                            }
+                        }
+                    }
+                    
+                    aside {
+                        width: 80%;
+                    @include alignColumn(flex-start);
+                    row-gap: .5vh;
+                    text-align: center;
+                        h5 {
+                            text-align: left;
+                            color: $mainColor;
+                            font-size: 14px;
+                            font-weight: 600;
+                        }
+                        address {
+                            font-size: 10px;
+                            text-align: left;
+                        }
+                        ul {
+                            width: 100%;
+                            display: flex;
+                            justify-content: left;
+                            align-items: center;
+                            margin: 0;
+                            padding: 0;
+                            li{
+                                list-style: none;
+                                width: 1.5vh;
+                                height: 1.5vh;
+                                border-radius: 50%;
+                                background-color: $mainColor;
+                                border:1px solid $mainColor;
+                            }
+
+                            li:nth-child(5) {
+                                border:1px solid $mediumGray;
+                                background-color: transparent;
+                            }
+
+                        
+                            li:last-child {
+                                border: none;
+                                background-color: transparent;
+                                padding-left: 2px;
+                                font-size: 10px;
+                                color: $mediumGray;
+                            }
+                        }
+
+                        a{
+                            align-items: flex-start;
+                            justify-content: left;
+                            border: 1px solid $mainColor;
+                            background-color: $mainColor;
+                            color: $whitegray;
+                            font-size: 10px;
+                            border-radius: 4vh;
+                            padding: .5vh 1vh;
+                        }
+
+                        a:active {
+                            background-color: $subColor1;
+                            border: 1px solid $subColor1;
+
+                        }
+                    }
+
+                }
+
+                article:nth-child(2) {
+                    figure {
+                        background-image: url(/img/restaurant_2.jpg);
+                    }
+                    aside {
+                        li:nth-child(4) {
+                            background-color: transparent;
+                            border: 1px solid $mediumGray;
+                        }
+                    }
+                }
+                article:nth-child(3) {
+                    figure {
+                        background-image: url(/img/restaurant_3.jpg);
+                    }
+                    aside {
+                        li:nth-child(4) {
+                            background-color: transparent;
+                            background: linear-gradient(90deg, $mainColor 50%, transparent 50%);
+                            border: 1px solid $mediumGray;
+                        }
+                    }
+                }
+                article:nth-child(4) {
+                    figure {
+                        background-image: url(/img/restaurant_4.jpg);
+                    }
+                    aside {
+                        li:nth-child(5) {
+                            background-color: transparent;
+                            background: linear-gradient(90deg, $mainColor 50%, transparent 50%);
+                            border: 1px solid $mediumGray;
+                        }
+                    }
+                }
+
+            }
+        }
+    }
     // // activities
     // .activities{}
     // // exhibition
