--- a/scss/pages/place/_mobile.scss
+++ b/scss/pages/place/_mobile.scss
@@ -35,6 +35,7 @@ main {
     .restaurant{
         > section {
             > section {
+                width: $contentRatioMob;
                 @include alignColumn(center);
                 row-gap: 4vh;
                 article {
@@ -180,8 +181,57 @@ main {
     }
     // // activities
     // .activities{}
-    // // exhibition
-    // .exhibition{}
+    // exhibition
+    .exhibition{
+        > section {
+            width: $contentRatioMob;
+            >section {
+                @include alignColumn (center);
+                row-gap: 1vh;
+                figure {border: 1px solid$mainColor;
+                    width: 100%;
+                    padding: 2vh;
+                    background-color: $whitegray;
+                    @include columnGap(4%);
+                    img {
+                        width: 45%;
+                    }
+                    figcaption {
+                        @include alignColumn (flex-start); 
+                        row-gap: 1.5vh; 
+                        width: 51%;
+                        h5 {
+                            font-size: 12px;
+                            font-weight: 600;
+                            text-transform: uppercase;
+                            color: $mainColor;
+                        }
+                        p {
+                            font-size: 8px;
+                            color: $mediumGray;
+                        }
+                        span {
+                            font-size: 12px;
+                            color: $subColor1;
+                        }
+                        aside {
+                            width: 100%;
+                            display: flex;
+                            justify-content: flex-end;
+                            a {
+                                font-size: 10px;
+                                font-weight: 600;
+                                padding: .5vh 1vh;
+                                color: $mainColor;
+                                border: 1px solid;
+                                border-radius: 5px;
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
     // theatre
     .theatre{
     
@@ -192,7 +242,7 @@ main {
                 display: none;
             }
             > section {
-                width: 100%;
+                width: $contentRatioMob;
                 >aside{
                     width: 100%;
                     img{
