--- a/scss/pages/place/_mobile.scss
+++ b/scss/pages/place/_mobile.scss
@@ -35,12 +35,13 @@ main {
     // restaurant
     .restaurant{
         > section {
+            @include alignColumn(center);
             > section {
                 width: $contentRatioMob;
                 @include alignColumn(center);
                 row-gap: 4vh;
                 article {
-                    width: 70%;
+                    width: 100%;
                     padding: 2vh 0;
                     border: 1px solid $lightgray;
                     @include alignColumn(center);
@@ -281,6 +282,53 @@ main {
             }
         }
     }
-    // // reference
-    // .reference{}
+    // reference
+    .reference{
+        > section {
+            width: $contentRatioMob ;
+            > article {
+                h2 {
+                    button {
+                    color: $subColor1;
+                    }
+
+                    button {
+                        color: $subColor1!important;
+                    }
+
+                    button:focus{
+                        background-color: rgba($color: $subColor1, $alpha: 0.2);
+                        color: $subColor1;
+                        box-shadow: 0 0 0 .4vh rgba($color: $subColor1, $alpha: 0.7);
+                    }
+        
+                }
+
+                figure {
+                    @include alignColumn(center);
+                    padding-bottom: 2vh;
+                    img {
+                        width: 90%;
+                    }
+                    figcaption {
+                        width: 90%;
+                        @include alignColumn(flex-start);
+                        row-gap: 1vh;
+                        p {
+                            margin: 0;
+                            padding: 0;
+                        }
+                        a {
+                            font-size: 12px;
+                            text-decoration: underline;
+                            color: $subColor1;
+                            margin: 0;
+                            padding: 0;
+                        }
+                    }
+                }
+
+            }
+        }
+    }
 }
