--- a/scss/pages/_desktop.scss
+++ b/scss/pages/_desktop.scss
@@ -3,6 +3,8 @@
     main {
         > section {
             row-gap: 5vh;
+            padding-top: 8vh;
+            padding-bottom: 8vh;
     
             > section, > aside {
                 width: $contentRatioDes;
