--- a/scss/pages/_mobile.scss
+++ b/scss/pages/_mobile.scss
@@ -149,6 +149,93 @@
     }
 }
 
+// footer
+footer {
+    color: white;
+    font-size: 13px;
+    line-height: 2;
+    @include alignColumn(center);
+
+    > section {
+        padding: 5%;
+        width: 90%;
+        background-color: #444;
+        @include rowGap(1.3vh);
+    }
+
+    section:last-child {
+        background-color: #222;
+        color: darkgray;
+        text-align: center
+    }
+
+    article {
+        @include rowGap(1.3vh);
+    }
+
+    ul {
+        display: flex;
+        column-gap: 1.5vh;
+    }
+
+    li {
+        list-style-type: none;
+    }
+
+    form {
+        @include rowGap(1.3vh);
+
+        article {
+            flex-direction: row;
+            align-items: flex-start;
+            line-height: 1.5;
+            color: darkgray;
+        }
+
+        article:last-child {
+            display: block;
+        }
+    }
+
+    input {
+        padding: 2%;
+    }
+
+    aside {
+        @include rowGap(1vh);
+    }
+
+    a, address {
+        color: darkgray;
+    }
+
+    a {
+        width: fit-content;
+    }
+
+    address {
+        font-style: normal;
+    }
+
+    i {
+        font-family: $defaultFont;
+    }
+
+    .fa-brands {
+        width: 3vh;
+        height: 3vh;
+        border: 1px solid darkgray;
+        border-radius: 50%;
+        @include alignColumn(center);
+        justify-content: center;
+    }
+}
+
+h6 {
+    font-size: 15px;
+    font-weight: 500;
+    text-transform: uppercase;
+}
 
 
     @import 'home/mobile';
