h_main: footer applied

--- a/scss/pages/event/_mobile.scss
+++ b/scss/pages/event/_mobile.scss
@@ -29,6 +29,12 @@ h1 {
     font-weight: 600;
 }
 
+footer {
+    > section {
+        box-sizing: content-box;
+    }
+}
+
 //--------------------
 
 main {
