--- a/scss/pages/place/_mobile.scss
+++ b/scss/pages/place/_mobile.scss
@@ -1,4 +1,43 @@
 
+
+//Removing bootstrap attribute for NAV
+
+nav, details {
+    box-sizing: content-box;
+}
+
+
+body {
+    line-height: normal;
+}
+
+h1, h2, h3, h4, h5, h6, address, p, figure {
+    margin: 0;
+}
+
+input {
+    font-size: initial;
+    line-height: normal;
+}
+
+ul {
+    padding: 0;
+    margin: 0;
+}
+
+h1 {
+    font-size: 32px;
+    font-weight: 600;
+}
+
+footer {
+    > section {
+        box-sizing: content-box;
+    }
+}
+
+//--------------------
+
 main {
     > section{
         width: 95%;
@@ -252,6 +291,7 @@ main {
                 row-gap: 1vh;
                 figure {border: 1px solid$mainColor;
                     width: 100%;
+                    height: 20vh;
                     padding: 2vh;
                     background-color: $whitegray;
                     @include columnGap(4%);
@@ -259,7 +299,8 @@ main {
                         width: 45%;
                     }
                     figcaption {
-                        @include alignColumn (flex-start); 
+                        @include alignColumn (flex-start);
+                        justify-content:center;
                         row-gap: 1.5vh; 
                         width: 51%;
                         h5 {
@@ -278,8 +319,10 @@ main {
                         }
                         aside {
                             width: 100%;
+                            height: 100%;
                             display: flex;
-                            justify-content: flex-end;
+                            align-items: flex-end;
+                            justify-content: right;
                             a {
                                 font-size: 10px;
                                 font-weight: 600;
